# robot_control_system

./: .gitignore  CONTRIBUTING.md  README.md  SYSTEM_STATUS.md  demo_memory.py  hello.py  main.py  pyproject.toml  requirements.txt  simple_state_test.py  systematic_evaluation.md  test_mouse_ik_system.py  test_with_viewer.py
.github/workflows/: ci.yml
Lab-01/.claude/: CLAUDE.md
Lab-01/outputs/2025-08-22/16-16-24/.hydra/: config.yaml  hydra.yaml
Lab-01/outputs/2025-08-22/16-16-36/.hydra/: hydra.yaml
Lab-01/outputs/2025-08-22/16-16-48/.hydra/: hydra.yaml
Lab-01/outputs/2025-08-22/16-16-57/.hydra/: hydra.yaml
Lab-01/outputs/2025-08-22/16-17-05/.hydra/: config.yaml  hydra.yaml
Lab-01/outputs/2025-08-22/16-17-42/.hydra/: hydra.yaml
Lab-01/robot_control_system/: .gitignore  LICENSE  MOUSE_ENDEFFECTOR_GUIDE.md  README.md  config.yaml  debug_adapter.py  hello.py  pyproject.toml  run_system_demo.py  run_tests.py
Lab-01/robot_control_system/adapters/: __init__.py  base_adapter.py  mujoco_adapter.py
Lab-01/robot_control_system/core/logging/: formatters.py
Lab-01/robot_control_system/core/memory/: memory_store.py  sqlite_memory_store.py  sqlite_memory_wrapper.py
Lab-01/robot_control_system/models/: base.py  control_commands.py
Lab-01/robot_control_system/modules/act/: __init__.py  act_module.py  command_generator.py  direct_control.py  end_effector_control.py
Lab-01/robot_control_system/modules/input/: input_module.py  keyboard_handler.py  models.py  mouse_control.py
Lab-01/robot_control_system/modules/output/: models.py  output_module.py
Lab-01/robot_control_system/modules/sense/: models.py  sensor_reader.py
Lab-01/robot_control_system/modules/watchdog/: metrics.py  watchdog_module.py
Lab-01/robot_control_system/tests/: __init__.py  test_adapter.py  test_integration.py  test_modules.py
adapters/: models.py
assets/robots/arm/: ur5e.xml
core/base/: module.py  observer.py
core/logging/: logger.py
core/memory/: __init__.py  memory_types.py
docs/: README.md  SYSTEM_SUMMARY.md
docs/api/: index.md
docs/guides/: installation.md
examples/: demo.py
models/: planning_data.py  robot_state.py  sensor_data.py
modules/act/: models.py
modules/input/: mouse_handler.py
modules/kinematics/: __init__.py  inverse_kinematics.py
modules/output/: __init__.py  signal_formatter.py
modules/plan/: __init__.py  models.py  plan_module.py  trajectory.py
modules/robot/: __init__.py  robot_module.py
modules/sense/: __init__.py  parser.py  sense_module.py
modules/watchdog/: failure_handler.py  health_monitor.py  models.py
scripts/: deployment_test.py  performance_check.py  quick_test.py  run_system.py  run_with_display.sh  simple_perf_check.py  test_full_integration.py  test_mouse_endeffector_control.py
tests/: test_memory.py
tools/: mujoco_viewer.py
(+31 files in other folders)
